--- a/SwantesonFranzianAnalysis.ipynb
+++ b/SwantesonFranzianAnalysis.ipynb
@@ -988,6 +988,32 @@
     "ax1.set_ylim([0,90])\n",
     "ax2.set_ylim([0,90])\n",
     "sns.despine()\n",
+    "sns.set_style('ticks')\n",
+    "\n",
+    "\n",
+    "f, ((ax1, ax2)) = plt.subplots(1,2, figsize =(13,5))\n",
+    "\n",
+    "for replicate in reps:\n",
+    "    \n",
+    "    for climate in nomansims:\n",
+    "        thisSimNoMan = summed_noman[(summed_noman.Sim == climate) & (summed_noman.rep == replicate)]\n",
+    "        summedTSNM = thisSimNoMan.NEECw.cumsum()\n",
+    "        summedTSNM.index = pd.date_range('2000-1-1', periods=len(summedTSNM), freq='1A')\n",
+    "        summedTSNM.plot(ax = ax1, color = 'gray', alpha = 0.05)\n",
+    "\n",
+    "    for climate in mgmtsims:\n",
+    "        thisSimRx = testRx[(testRx.Sim == climate) & (testRx.rep == replicate)]\n",
+    "        summedTSRX = thisSimRx.NEECw.cumsum()\n",
+    "        summedTSRX.index = pd.date_range('2000-1-1', periods=len(summedTSRX), freq='1A')\n",
+    "        summedTSRX.plot(ax = ax2, color = 'gray', alpha = 0.05)\n",
+    "        \n",
+    "\n",
+    "nomanmean.NECBw.plot(ax = ax1, color = 'black', linestyle = '--')\n",
+    "rxmean.NECBtot.plot(ax = ax2, color = 'black', linestyle = '--')\n",
+    "\n",
+    "ax1.set_ylim([0,90])\n",
+    "ax2.set_ylim([0,90])\n",
+    "sns.despine()\n",
     "sns.set_style('ticks')"
    ]
   }
